[85] added deployments filtering
